<resources>
    <string name="app_name">Github Users</string>
    <string name="find_someone">Find Someone!</string>
    <string name="type_here">Type here</string>
    <string name="favorite">Favorite</string>
    <string name="search_icon">Search Icon</string>
    <string name="data_is_empty">Data is empty</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
</resources>